crates/nash-codegen/src/snapshots/nash_codegen__propagate_tests__literal_alias_chain.snap
---
source: crates/nash-codegen/src/propagate_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let x#1 : int = 42 in
let y#2 : int = x#1 in
y#2
--- core after
42
--- baseline
--- uplc
(program 1.1.0 [(lam x_1 [(lam y_2 y_2) x_1]) (con integer 42)])
--- result
(con integer 42)
--- logs
[]
--- candidate
--- uplc
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
