crates/nash-codegen/src/snapshots/nash_codegen__propagate_tests__unselected_alias_strict_failure.snap
---
source: crates/nash-codegen/src/propagate_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let strict#1 : int = trace "strict failure" in error in
let alias#2 : int = strict#1 in
case@Bool true of
  True -> 42
  False -> alias#2
--- core after
let strict#1 : int = trace "strict failure" in error in
case@Bool true of
  True -> 42
  False -> strict#1
--- baseline
--- uplc
(program 1.1.0
  [(lam strict_1
    [(lam alias_2 (case (con bool True) alias_2 (con integer 42))) strict_1])
    (force
      [[(force (builtin trace)) (con string "strict failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["strict failure"]
--- candidate
--- uplc
(program 1.1.0
  [(lam strict_1 (case (con bool True) strict_1 (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "strict failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["strict failure"]
